--- a/ContestProject/ClientApp/package.json
+++ b/ContestProject/ClientApp/package.json
@@ -16,6 +16,7 @@
     "@angular/platform-browser": "~10.0.0",
     "@angular/platform-browser-dynamic": "~10.0.0",
     "@angular/router": "~10.0.0",
+    "ngx-cookie-service": "^12.0.3",
     "rxjs": "~6.5.5",
     "zone.js": "~0.10.3"
   },
